# Epitech-Tek2-OOP-NanoTekSpice

./: .gitignore  CMakeLists.txt  Makefile
.github/workflows/: NanoTekSpice.yml
bootstrap/: CMakeLists.txt
bootstrap/include/Components/: AComponent.hpp  AndComponent.hpp  FalseComponent.hpp  IComponent.hpp  NotComponent.hpp  TrueComponent.hpp
bootstrap/src/: main.cpp
bootstrap/src/Components/: AComponent.cpp  AndComponent.cpp  FalseComponent.cpp  IComponent.cpp  NotComponent.cpp  TrueComponent.cpp
include/: IComponent.hpp  NanoTekSpice.hpp
src/: Main.cpp  NanoTekSpice.cpp
src/Circuit/: Circuit.cpp  Circuit.hpp
src/Components/: AComponent.cpp  AComponent.hpp  IComponent.cpp  IComponent.hpp
src/Components/Advanced/2716/: Component2716.cpp  Component2716.hpp
src/Components/Advanced/4008/: Component4008.cpp  Component4008.hpp
src/Components/Advanced/4013/: Component4013.cpp  Component4013.hpp
src/Components/Advanced/4017/: Component4017.cpp  Component4017.hpp
src/Components/Advanced/4040/: Component4040.cpp  Component4040.hpp
src/Components/Advanced/4094/: Component4094.cpp  Component4094.hpp
src/Components/Advanced/4512/: Component4512.cpp  Component4512.hpp
src/Components/Advanced/4514/: Component4514.cpp  Component4514.hpp
src/Components/Advanced/4801/: Component4801.cpp  Component4801.hpp
src/Components/Elementary/And/: And.cpp  And.hpp  ComponentAnd.cpp  ComponentAnd.hpp
src/Components/Elementary/Not/: ComponentNot.cpp  ComponentNot.hpp  Not.cpp  Not.hpp
src/Components/Elementary/Or/: ComponentOr.cpp  ComponentOr.hpp  Or.cpp  Or.hpp
src/Components/Elementary/Xor/: ComponentXor.cpp  ComponentXor.hpp  Xor.cpp  Xor.hpp
src/Components/Factory/: ComponentsFactory.cpp  ComponentsFactory.hpp
src/Components/Gates/4001/: Component4001.cpp  Component4001.hpp
src/Components/Gates/4011/: Component4011.cpp  Component4011.hpp
src/Components/Gates/4030/: Component4030.cpp  Component4030.hpp
src/Components/Gates/4069/: Component4069.cpp  Component4069.hpp
src/Components/Gates/4071/: Component4071.cpp  Component4071.hpp
src/Components/Gates/4081/: Component4081.cpp  Component4081.hpp
src/Components/Logger/: ComponentLogger.cpp  ComponentLogger.hpp
src/Components/Special/Clock/: Clock.cpp  Clock.hpp  ComponentClock.cpp  ComponentClock.hpp
src/Components/Special/False/: ComponentFalse.cpp  ComponentFalse.hpp  False.cpp  False.hpp
src/Components/Special/Input/: ComponentInput.cpp  ComponentInput.hpp  Input.cpp  Input.hpp
src/Components/Special/Output/: ComponentOutput.cpp  ComponentOutput.hpp  Output.cpp  Output.hpp
src/Components/Special/True/: ComponentTrue.cpp  ComponentTrue.hpp  True.cpp  True.hpp
src/Parsing/Config/: Config.cpp  Config.hpp
src/Shell/: Shell.cpp  Shell.hpp
src/Utilities/: Utilities.cpp  Utilities.hpp
tests/: test_4001.cpp  test_4011.cpp  test_4030.cpp  test_4069.cpp  test_4071.cpp  test_4081.cpp  test_and.cpp  test_bad.cpp  test_clock.cpp  test_false.cpp  test_input_output.cpp  test_logger.cpp  test_no_argument.cpp  test_not.cpp  test_or.cpp  test_or_gate.cpp  test_true.cpp  test_xor.cpp
tests/include/: tests.hpp
tests/test_files/elementary/and/: and.nts
tests/test_files/elementary/not/: input.txt  not.nts
tests/test_files/elementary/or/: input.txt  or.nts
tests/test_files/elementary/xor/: xor.nts
tests/test_files/gates/: 4001_nor.nts  input.txt
tests/test_files/gates/4069/: input.txt
tests/test_files/logger/: input.txt  logger.nts
tests/test_files/special/input_output/: input.txt
